# ops-nn

./: .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_en.md  CMakeLists.txt  CONTRIBUTING_en.md  QUICKSTART.md  QUICKSTART_en.md  README.md  README_en.md  SECURITY.md  SECURITY_en.md  build.sh  classify_rule.yaml  test.txt
.gitcode/: PULL_REQUEST_TEMPLATE.zh-CN.md
.gitcode/scripts/: arm_compile.sh  pre_smoke.sh  ut.sh  x86_compile.sh
.gitcode/workflows/: arm_compile_action.yml  codecheck_action.yml  llt_action.yml  ops-nn_action.yml  staticcheck_action.yml  x86_compile_action.yml
activation/bnll/: README.md
activation/celu/: README.md
activation/celu_v2/: README.md
activation/clipped_swiglu/: README.md
activation/confusion_softmax_grad/: README.md
activation/edge_softmax/: CMakePresets.json  README.md  build.sh
activation/elu/: README.md
activation/elu_grad/: README.md
activation/elu_grad_v2/: README.md
activation/erfinv/: README.md
activation/fast_gelu/: README.md
activation/fast_gelu_grad/: README.md
activation/fatrelu_mul/: README.md
activation/fused_bias_leaky_relu_grad/: README.md
activation/ge_glu_grad_v2/: README.md
activation/ge_glu_v2/: README.md
activation/gelu/: README.md
activation/gelu_grad/: README.md
activation/gelu_mul/: README.md
activation/gelu_quant/: README.md
activation/glu/: README.md
activation/glu_grad/: README.md
activation/hard_shrink/: README.md
activation/hard_shrink_grad/: README.md
activation/hard_sigmoid/: README.md
activation/hard_sigmoid_grad/: README.md
activation/hard_swish_grad/: README.md
activation/hard_swish_grad_v2/: README.md
activation/hardtanh_grad/: README.md
activation/heaviside/: README.md
activation/leaky_relu/: README.md
activation/leaky_relu_grad/: README.md
activation/logsigmoid_grad/: README.md
activation/mish/: README.md
activation/p_relu/: README.md
activation/p_relu_grad_reduce/: README.md
activation/p_relu_grad_update/: README.md
activation/relu/: README.md
activation/relu6/: README.md
activation/relu6_d/: CMakeLists.txt  README.md
activation/relu6_grad/: README.md
activation/relu_grad/: README.md
activation/relu_grad_v2/: README.md
activation/relu_v2/: README.md
activation/selu/: README.md
activation/selu_grad/: README.md
activation/shrink/: README.md
activation/sigmoid/: CMakeLists.txt  README.md
cmake/: func.cmake  gen_ops_info.cmake  symbol.cmake  ut.cmake
docs/: CONTRIBUTING_DOCS.md  CONTRIBUTING_DOCS_en.md  QUICKSTART.md  README.md  README_en.md
examples/: README.md
matmul/weight_quant_batch_matmul_v2/tests/ut/op_host/: CMakeLists.txt  test_aclnn_weight_quant_batch_matmul_nz_api.cpp  test_aclnn_weight_quant_batch_matmul_v2_api.cpp
matmul/weight_quant_batch_matmul_v2/tests/ut/op_host/op_api/: CMakeLists.txt  test_aclnn_weight_quant_batch_matmul_nz_api.cpp  test_aclnn_weight_quant_batch_matmul_v2_api.cpp  test_aclnn_weight_quant_batch_matmul_v2_opapi.cpp  test_aclnn_weight_quant_batch_matmul_v3_api.cpp
norm/lp_norm_update/tests/: CMakeLists.txt
norm/lp_norm_update/tests/assets/: golden.py
norm/lp_norm_update/tests/st/aclnnLpNormUpdate/: atk_aclnnLpNormUpdate.json  executor_aclnnLpNormUpdate.py
norm/lp_norm_update/tests/ttk/: ttk_kernel_lp_norm_update.csv
norm/lp_norm_update/tests/ut/: CMakeLists.txt
norm/lp_norm_update/tests/ut/op_host/: CMakeLists.txt  test_lp_norm_update_infershape.cpp
norm/lp_norm_update/tests/ut/op_host/arch35/: CMakeLists.txt  test_lp_norm_update_tiling_arch35.cpp
torch_extension/: README.md  setup.py
(+3067 files in other folders)
