
# Tiling UT (arch35)：独立编译，不依赖 CANN faker 框架
add_executable(test_lp_norm_update_tiling_arch35 test_lp_norm_update_tiling_arch35.cpp)
target_compile_features(test_lp_norm_update_tiling_arch35 PRIVATE cxx_std_17)
target_compile_options(test_lp_norm_update_tiling_arch35 PRIVATE -Wall -Wextra)
add_test(NAME test_lp_norm_update_tiling_arch35 COMMAND test_lp_norm_update_tiling_arch35)
